Adding filter type to filter form and complete admin user controller and add admin and user document controller

--- a/translations/forms.fr.yaml
+++ b/translations/forms.fr.yaml
@@ -73,3 +73,24 @@ message:
         agree_terms: "Vous devez accepter nos conditions générales"
     invalid_message:
         password: "Les champs du mot de passe doivent correspondre."
+
+filter:
+    label:
+        type: "Sélectionner type de filtre"
+        search: "Recherche"
+        date: "Sélectionner une date"
+    placeholder:
+        search: "Recherche"
+        date: "Date"
+    reset: "Réinitialiser les filtres"
+    options:
+        type:
+            placeholder: "Type de filtre"
+            all: "Tous"
+            id: "Id"
+            name: "Nom"
+            email: "Email"
+            phone: "Téléphone"
+            address: "Adresse"
+            category: "Catégorie"
+            file: "Fichier"
