--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -47,8 +47,13 @@ admin:
         list:
             title: "Documents"
             name: "Documents"
-            add: "Ajouter un document"
-            view: "Voir les catégories"
+            button:
+                add: "Ajouter un document"
+                categories: "Voir les catégories"
+            action:
+                view: "Voir le document"
+                user: "Voir l'utilisateur"
+                delete: "Supprimer le document"
             table:
                 id: "ID"
                 name: "NOM"
@@ -61,7 +66,12 @@ admin:
         list:
             title: "Catégories de documents"
             name: "Catégories de documents"
-            add: "Ajouter une catégorie"
+            button:
+                add: "Ajouter une catégorie"
+                documents: "Voir les documents"
+            action:
+                edit: "Modifier la catégorie"
+                delete: "Supprimer la catégorie"
             table:
                 id: "ID"
                 label: "LIBELLÉ"
@@ -69,3 +79,9 @@ admin:
         new:
             title: "Nouvelle catégorie de document"
             name: "Nouvelle catégorie de document"
+        edit:
+            title: "Modifier la catégorie de document"
+            name: "Modifier la catégorie de document"
+        delete:
+            title: "Supprimer la catégorie de document"
+            name: "Supprimer la catégorie de document"
