--- a/translations/flashes.fr.yaml
+++ b/translations/flashes.fr.yaml
@@ -1,3 +1,8 @@
+document:
+    new:
+        success: "Le document %label% a été créé avec succès."
+    delete:
+        success: "Le document %label% a été supprimé avec succès."
 document_category:
     new:
         success: "La catégorie de document %label% a été créée avec succès."
