Fix table search form and finish crud for admin user and document page

--- a/translations/flashes.fr.yaml
+++ b/translations/flashes.fr.yaml
@@ -1,3 +1,6 @@
+user:
+    delete:
+        success: "L'utilisateur %username% a été supprimé avec succès."
 document:
     new:
         success: "Le document %label% a été créé avec succès."
