Request system and style

--- a/translations/forms.fr.yaml
+++ b/translations/forms.fr.yaml
@@ -53,6 +53,7 @@ filter:
             file: "Fichier"
             user: "Utilisateur"
             label: "Libellé"
+            title: "Titre"
 
 admin:
     form:
