--- a/translations/forms.fr.yaml
+++ b/translations/forms.fr.yaml
@@ -15,6 +15,9 @@ label:
     category: "Catégorie"
     user: "Utilisateur"
     file: "Fichier"
+    message: "Message"
+    title: "Titre"
+    content: "Contenu"
 
 placeholder:
     name: "Jean DUPONT ou Société XYZ"
@@ -31,6 +34,9 @@ placeholder:
         label: "Pour confirmer, veuillez retaper le libellé"
         name: "Pour confirmer, veuillez retaper le nom"
     name_document: "Contrat de prestation"
+    message: "Votre message..."
+    title: "Titre"
+    content: "Contenu"
 
 filter:
     label:
@@ -116,6 +122,29 @@ admin:
             description: "Êtes-vous sûr de vouloir supprimer cette catégorie ?"
             submit: "Oui, supprimer"
             back: "Non, revenir en arrière"
+        new_request_category:
+            title: "Ajouter une catégorie de demande"
+            description: "Veuillez saisir les informations de la catégorie"
+            submit: "Ajouter la catégorie"
+            back: "Retour à la liste des catégories"
+        edit_request_category:
+            title: "Modifier une catégorie de demande"
+            description: "Veuillez saisir les informations de la catégorie"
+            submit: "Mettre à jour la catégorie"
+            back: "Retour à la liste des catégories"
+        delete_request_category:
+            title: "Supprimer une catégorie de demande"
+            description: "Êtes-vous sûr de vouloir supprimer cette catégorie ?"
+            submit: "Oui, supprimer"
+            back: "Non, revenir en arrière"
+
+profile:
+    form:
+        new_request:
+            title: "Nouvelle demande"
+            description: "Veuillez saisir les informations de la demande"
+            submit: "Envoyer la demande"
+            back: "Retour à la liste des demandes"
 
 message:
     not_blank:
@@ -129,6 +158,7 @@ message:
             city: "La ville ne peut pas être vide."
         label: "Le libellé ne peut pas être vide."
         confirm_delete: "Vous devez confirmer la suppression."
+        message: "Le message ne peut pas être vide."
     length:
         min:
             phone: "Le numéro de téléphone doit comporter au moins %limit% caractères."
