--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -15,6 +15,7 @@ navigation:
         documents: "Mes documents"
         requests: "Mes demandes"
     utils:
+        settings: "Paramètres"
         logout: "Déconnexion"
 
 chat:
@@ -153,6 +154,9 @@ admin:
             name: "Supprimer la catégorie de demande"
 
 profile:
+    settings:
+        title: "Paramètres du profil"
+        name: "Paramètres du profil"
     document:
         list:
             title: "Mes documents"
